--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
-/[Aa]ssets/Tests/
+/[Aa]ssets/Tests/*
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
